# nonlinear-preferential-attachment

./: .gitignore  Cargo.toml  analysis.ipynb  execute-parallel-scaling.py  execute_benchmarks.py  make-anon.sh  run-par-scaling.py  run-seq-scaling.py  schedule-par-scaling.py  schedule-seq-scaling.py  seq-benchmark.ipynb
ext/dynamic-weighted-index/examples/: non_linear_preferential_attachment_poly.rs
ext/dynamic-weighted-index/src/: dynamic_weighted_index.rs
src/: edge_writer.rs  lib.rs  main.rs  parameters.rs  weight_function.rs
src/algorithm/: algo_dynamic_weighted_index.rs  algo_poly_pa.rs  algo_poly_pa_prefetch.rs  mod.rs
src/algorithm/algo_parallel_poly_pa/: mod.rs  proposal_list.rs  reports.rs  run_length.rs  shared_state.rs  worker.rs
