[package]
name = "rust-nlpa"
version = "0.1.0"
edition = "2021"
default-run = "rust-nlpa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ringbuffer = "0.8"
rand = "0.8"
rand_distr = "0.4"
pcg_rand = "0.13"
structopt = "0.3"
itertools = "0.10"
dynamic-weighted-index = { path = "ext/dynamic-weighted-index" }
crossbeam = "0.8"
fxhash = "0.2.1"
atomic_float = "0.1.0"
num_cpus = "1.13"
hurdles = "1.0.1"

[profile.release]
debug = true
